--- a/package.json
+++ b/package.json
@@ -3,28 +3,55 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "@storybook/addon-storyshots": "^6.0.21",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "babel-jest": "^26.3.0",
+    "babel-loader": "^8.1.0",
     "big.js": "^5.2.2",
     "bootstrap": "^4.5.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^4.2.2",
+    "html-loader": "^1.3.0",
+    "html-webpack-plugin": "^4.4.1",
+    "jest": "^26.4.2",
+    "lint-staged": "^10.2.13",
     "nodejs": "0.0.0",
+    "path": "^0.12.7",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-hot-loader": "^4.12.21",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-spring": "^8.0.27",
-    "styled-components": "^5.1.1"
+    "react-test-renderer": "^16.13.1",
+    "redux": "^4.0.5",
+    "sass-loader": "^10.0.1",
+    "script-loader": "^0.7.2",
+    "style-loader": "^1.2.1",
+    "styled-components": "^5.1.1",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.1.3",
+    "webpack-node-externals": "^2.5.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "build:dev": "webpack -d --env=development",
+    "build:prod": "webpack -p --env=production",
+    "build:serve": "webpack-dev-server -d --open --env=development",
+    "serve": "HTTPS=true webpack-dev-server -d --open --env=development",
+    "storybook": "start-storybook -p 6006 -c .storybook --debug-webpack",
+    "build-storybook": "build-storybook -c .storybook",
+    "test": "jest --config jest.config.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,6 +69,35 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-react-constant-elements": "^7.10.4",
+    "@babel/plugin-transform-react-inline-elements": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/runtime": "^7.11.2",
+    "@storybook/addon-actions": "^6.0.21",
+    "@storybook/addon-essentials": "^6.0.21",
+    "@storybook/addon-links": "^6.0.21",
+    "@storybook/node-logger": "^6.0.21",
+    "@storybook/preset-create-react-app": "^3.1.4",
+    "@storybook/react": "^6.0.21",
+    "@svgr/webpack": "^5.4.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "babel-preset-jest": "^26.3.0",
+    "chromatic": "^5.1.0",
+    "gh-pages": "^3.1.0",
+    "react-is": "^16.13.1",
+    "url-loader": "^4.1.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.(js|jsx|ts)$": "babel-jest",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/internals/jest/fileTransform.js",
+      "\\.(css|less)$": "<rootDir>/internals/jest/cssTransform.js"
+    },
+    "setupTestFrameworkScriptFile": "<rootDir>/internals/jest/settings.js",
+    "testURL": "http://localhost/"
   }
 }
