--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "3.4.3",
     "react-spring": "^8.0.27",
     "react-test-renderer": "^16.13.1",
+    "react95": "^3.0.1",
     "redux": "^4.0.5",
     "sass-loader": "^10.0.1",
     "script-loader": "^0.7.2",
